# ecopy

./: CMakeLists.txt  ReadMe.md
cmake/: sysconf.h.cmake
include/: directory.h  path.h  thread.h
src/: directory.c  main.c  path.c  thread.c
test/: CMakeLists.txt
test/units/: path.c
